service2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      imagePullSecrets:
        - name: acr-pull
      containers:
        - name: service2
          image: terrak8spractice3devregistry.azurecr.io/terrak8s-practice-3-service2:0.02
          ports:
            - containerPort: 3002
