service1-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: terrak8s-practice-3-service1-clusterip
spec:
  type: ClusterIP
  selector:
    app: service1
  ports:
    - port: 80
      targetPort: 3001
