service1-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: terrak8s-practice-3-service1-nodeport
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3001
      nodePort: 31111
      protocol: TCP
  #Add another of lines 8-11 for 443 (HTTPS) with proper certs
  selector:
    app: service1
