service2-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: terrak8s-practice-3-service2-clusterip
spec:
  type: ClusterIP
  selector:
    app: service2
  ports:
    - port: 80
      targetPort: 3002
