istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: app-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway # Use Istio's default ingress gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
    #- port:
    #    number: 443
    #    name: https
    #    protocol: HTTPS
    #  tls:
    #    mode: SIMPLE
    #    credentialName: api-tls-secret # TLS certificate
    #  hosts:
    #    - "localhost"
